[package]
name = "mysql-viz-backend"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Parses the log files from a MySQL server and uses them to provide data for a Minutiae simulation."

[dependencies]
chrono = "0.4"
lazy_static = "0.2.8"
minutiae = { path = "../../minutiae/minutiae" }
regex = "0.2"
