[package]
name = "mysql-viz-backend"
version = "0.1.0"
authors = ["Casey Primozic <me@ameo.link>"]
description = "Parses the log files from a MySQL server and uses them to provide data for a Minutiae simulation."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "0.2.8"
minutiae = { path = "../../minutiae/minutiae", features = ["server"] }
pcg = { git = "https://github.com/ameobea/pcg.git" }
rand = "0.3"
regex = "0.2"
serde = { version = "1.*.*" }
serde_derive = { version = "1.*.*" }
uuid = "0.5.1"
